# MatrixCalculator

./: LICENSE  README.md  main.py  matrix.py  pyproject.toml  start.bat
UI/: main.ui
